adapt to use RHT03 humidity/temp sensor

--- a/case_study_arduino/.project
+++ b/case_study_arduino/.project
@@ -42,9 +42,14 @@
 			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/arduino/hardware/avr/1.6.21/variants/standard</locationURI>
 		</link>
 		<link>
-			<name>libraries/Adafruit_HTU21DF_Library</name>
+			<name>libraries/Adafruit_Unified_Sensor</name>
 			<type>2</type>
-			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/Adafruit_HTU21DF_Library/1.0.1</locationURI>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/Adafruit_Unified_Sensor/1.0.2</locationURI>
+		</link>
+		<link>
+			<name>libraries/DHT_sensor_library</name>
+			<type>2</type>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/DHT_sensor_library/1.3.0</locationURI>
 		</link>
 		<link>
 			<name>libraries/Servo</name>
