--- a/transform_tools/plugin.xml
+++ b/transform_tools/plugin.xml
@@ -4,8 +4,8 @@
    <extension
          point="org.eclipse.epsilon.common.dt.tool">
       <tool
-            class="org.sew569.transform_tools.ReadFilesTool"
-            defaultName="ReadFilesTool">
+            class="org.sew569.transform_tools.CodeGenHelper"
+            defaultName="CodeGenHelper">
       </tool>
    </extension>
 
