--- a/SoftwareMigrator/.classpath
+++ b/SoftwareMigrator/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="/Users/sophie/eclipse-projects/thesis/SoftwareMigrator/jars/guava-25.1-jre.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
